# discord-restricted-promotion

./: .gitignore  Cargo.toml  README.md
bot/: .gitignore  config.default.toml  log4rs.yml
src/: app_config.rs  app_lang.rs  event_handler.rs  history_log.rs  invite_finder.rs  main.rs
