[package]
edition = "2021"
name = "discord-restricted-promotion"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
chrono = "0.4.19"
chrono-tz = "0.6.1"
config = "0.13.1"
futures = "0.3.21"
log = "0.4.17"
log4rs = "1.1.1"
regex = "1.5.6"
reqwest = { version = "0.11.10", features = ["json"] }
rusqlite = { version = "0.27.0", features = ["bundled"] }
serde = "1.0.137"
serde_json = "1.0.81"
serenity = "0.11.2"
tokio = {version = "1.18.2", features = ["rt-multi-thread"]}
